Force Maven to open the module (temporary bypass)